--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,12 @@
 
 .App {
   text-align: center;
-  background-color: #282c34;
-  color: rgb(204, 204, 204);
-  width: 100vw;
-  height: 100vh;
+  background-color: #ffffff;
+  color: rgb(0, 6, 31);
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
 
 .App-logo {
@@ -50,4 +52,73 @@
   font-family:"Mulish Bold";
   padding: 30px 0px;
   font-size: xx-large;
+}
+
+.map_container{
+  display:flex;
+  justify-content: center;
+  width:100%;
+}
+
+#chartdiv{
+  border: 5px solid rgba(0,0,0,0.2);
+  border-radius: 15px;
+  width: 95%;
+  height: 500px;
+}
+
+.tableContainer{
+  margin-top: 30px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 1000px;
+}
+
+tr{
+  background-color:#385A64;
+}
+
+td{
+  color:white!important;
+}
+
+td .input{
+  border-color: white;
+}
+
+/*.MuiTableSortLabel-active, .MuiTableSortLabel-iconDirectionAsc {
+  color: #d68b8b !important;
+} */
+
+.MuiTablePagination-toolbar{
+  color:white !important;
+}
+
+.MuiTablePagination-toolbar div svg{
+  color:white !important;
+}
+
+.MuiTablePagination-toolbar div span{
+  color:white !important;
+  
+}
+
+.active{
+  background-color: #3B809D !important;
+}
+
+.MuiTableRow-root.MuiTableRow-hover:hover{
+  background-color: #6b6b6b !important;
+}
+
+/*style for selected checkbox*/
+.MuiCheckbox-colorSecondary.Mui-checked{
+  color: #FF9198 !important;
+}
+
+/*style for disabled checkbox*/
+.MuiCheckbox-colorSecondary.Mui-disabled{
+
 }
