--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,210 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face{
+  font-family: Mulish;
+  src: url('/fonts/Mulish-Regular.ttf');
+}
+
+#welcome{
+  position: absolute;
+  width: 441px;
+  height: 63px;
+  left: 65.6px;
+  top: 44.8px;
+
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+
+  color: #000000;
+}
+
+#title{
+  position: absolute;
+  width: 1166px;
+  height: 190px;
+  left: 65.6px;
+  top: 68px;
+
+  font-family: Mulish;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  display: flex;
+  align-items: center;
+
+  color: #000000;
+}
+
+#btn-continue{
+  position: absolute;
+  width: 480.8px;
+  height: 141.6px;
+  left: 519.2px;
+  top: 279.1px;
+  display:flex;
+  flex-direction:row;
+  background: #50B0D8;
+  filter: drop-shadow(0px 10px 4px rgba(0, 0, 0, 0.25));
+}
+
+#text{
+  flex-grow: 1;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 64px;
+  margin:auto;
+  text-align:center;
+  color: #FFFFFF;
+}
+
+#click{
+  flex-grow: 1;
+  height:100%;
+  background: #FFFFFF;
+  color: #50B0D8;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+  cursor: pointer;
+}
+
+#chevron{
+  text-align:center;
+  font-size: 96px;
+}
+
+#chevron > i{
+  margin-right:-10px;
+  margin-left: -10px;
+}
+
+#unpar{
+  width: 300px;
+  height: 310.51px;
+  position:absolute;
+  top: 400px;
+  left: 1107.2px;
+}
+
+/*footer*/
+#footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  background-color: #3B809D;
+}
+
+#footer-container{
+  display:flex;
+  flex-direction:row;
+  align-items: center;
+  justify-content: center;
+}
+
+#footer-img{
+  height: 55px;
+  background: #FFFFFF;
+  width: 220px;
+  border: 1px #FFFFFF solid;
+  border-radius: 10px;
+  margin-top:10px;
+  text-align: center;
+}
+
+#footer-img > img{
+  height:40px;
+  margin-top:6px;
+}
+
+#footer-text{
+  color: white;
+  margin-left: 40px;
+}
+
+
+/*Home*/
+
+#home{
+  display:flex;
+  flex-direction:column;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom:100px;
+}
+
+.home-item-container{
+  color: black;
+  margin-top: 40px;
+  width:80%;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items:center;
+}
+
+.home-item-container-2{
+  color: black;
+  margin-top: 40px;
+  width:55%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items:center;
+}
+
+.about-text{
+  width:30%;
+  align-items: center;
+}
+
+.about-text-2{
+  width:100%;
+  align-items: center;
+}
+
+.about-title{
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+}
+
+.about-item{
+  margin-top: 30px;
+  display:flex;
+  width:100%;
+  flex-direction: row;
+}
+
+.about-item-text-1,.about-item-text-2{
+  flex:1;
+  height:130px;
+}
+
+.about-item-text-1{
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background: rgba(171, 171, 171,0.1);
+}
+
+.about-item-text-2{
+  background: #385A64;
+}
+
+#web-img{
+  width: 450px;
+}
+
+#dev-img{
+  width:350px;
+}
