--- a/src/App.css
+++ b/src/App.css
@@ -325,3 +325,19 @@
   background-color: #3B809D;
   cursor: pointer;
 }
+
+.title{
+  font-family:"Mulish Bold";
+  padding: 30px 0px;
+  font-size: xx-large;
+  text-align: center;
+}
+
+.map_container{
+  display:flex;
+  justify-content: center;
+  width:65%;
+}
+
+.map_main{
+}
